--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "express-session": "1.17.3",
     "express-static-gzip": "2.1.7",
     "fast-csv": "4.3.6",
+    "framer-motion": "6.5.1",
     "fs-extra": "10.1.0",
     "handlebars": "4.7.7",
+    "html-react-parser": "5.2.6",
     "html-to-text": "8.2.0",
     "http-errors": "~2.0.0",
     "imap": "0.8.19",
@@ -101,7 +103,6 @@
     "react-dom": "17.0.2",
     "react-grid-layout": "1.3.4",
     "react-hot-keys": "2.7.2",
-    "react-html-parser": "2.0.2",
     "react-idle-timer": "5.4.1",
     "react-infinite-scroller": "1.2.6",
     "react-markdown": "8.0.3",
@@ -131,7 +132,6 @@
     "uglify-js": "3.16.2",
     "unzipper": "0.10.11",
     "util": "0.12.4",
-    "velocity-react": "1.4.3",
     "winston": "3.8.1",
     "xss": "1.0.13",
     "yaml": "2.1.1"
@@ -182,6 +182,7 @@
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.0.0",
     "mocha-lcov-reporter": "1.3.0",
+    "mongodb-memory-server": "10.2.1",
     "nyc": "15.1.0",
     "patch": "0.0.1",
     "prettier-standard": "16.4.1",
