Rebrand to Herzen Core
- Update all Docker files and scripts to use 'Herzen Core' branding
- Update container names to herzen-core
- Update service descriptions and documentation
- Position as central service for ticket management in Herzen Managed Services ecosystem
- Update README with new branding and purpose description

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,12 +28,12 @@ services:
     networks:
       - herzen-dev
 
-  # Herzen приложение для разработки
-  herzen:
+  # Herzen Core приложение для разработки
+  herzen-core:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: herzen-app-dev
+    container_name: herzen-core-dev
     restart: unless-stopped
     depends_on:
       - mongo
