--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Dockerfile для разработки с hot reload
+# Dockerfile для разработки Herzen Core с hot reload
 FROM node:18-alpine
 
 # Устанавливаем системные зависимости
