Fix Dockerfile to use npm install instead of npm ci
- Replace npm ci with npm install in both Dockerfile and Dockerfile.dev
- npm ci requires package-lock.json which doesn't exist in this project
- npm install will work with package.json and yarn.lock

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -28,7 +28,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Устанавливаем ВСЕ зависимости (включая dev)
-RUN npm ci && npm cache clean --force
+RUN npm install && npm cache clean --force
 
 # Копируем исходный код
 COPY . .
