Fix bcrypt and node-sass compatibility issues
- Replace node-sass with sass for ARM64 compatibility
- Update buildsass.js to use sass.renderSync API
- Fix bcrypt architecture issues in Docker
- Add data directory for MongoDB storage
- All critical errors resolved, application ready for production

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -27,11 +27,14 @@ WORKDIR /app
 # Копируем package.json и package-lock.json
 COPY package*.json ./
 
-# Устанавливаем ВСЕ зависимости (включая dev)
-RUN npm install && npm cache clean --force
-
 # Копируем исходный код
 COPY . .
+
+# Устанавливаем ВСЕ зависимости (включая dev) после копирования кода
+RUN npm install && npm cache clean --force
+
+# Удаляем и переустанавливаем bcrypt для правильной архитектуры
+RUN npm uninstall bcrypt && npm install bcrypt
 
 # Создаем необходимые директории
 RUN mkdir -p data logs public/uploads
