feat: Добавлена синхронизация данных между dev и prod
- Создан docker-compose.prod.yml с bind mounts для данных
- Добавлен скрипт sync-data.sh для синхронизации данных
- Обновлен .dockerignore для исключения всех данных
- Добавлена документация по синхронизации данных

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
 # Исключаем большие файлы из Docker контекста
-data/mongo/
+data/
 node_modules/
 .git/
 *.log
@@ -7,6 +7,7 @@ logs/
 *.tmp
 .DS_Store
 Thumbs.db
+backups/
 
 # Исключаем dev файлы
 *.md
@@ -16,3 +17,4 @@ Dockerfile.dev
 dev.sh
 update-server.sh
 deploy-server.sh
+sync-data.sh
