feat: Единая структура данных для dev и prod
- Обновлен docker-compose.prod.yml для использования той же структуры папок
- Обновлен sync-data.sh для работы с одинаковой структурой
- Данные теперь хранятся в одном месте: ./data/mongo/, ./data/app/, ./logs/, ./public/uploads/
- Обновлена документация

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ public/uploads/assets/upload/
 stats\.json
 dist/
 *.heapsnapshot
+
+# Herzen Core - данные включены в Git для синхронизации
+# data/mongo/ - MongoDB данные
+# data/app/ - данные приложения
+# logs/ - логи приложения
+# public/uploads/ - загруженные файлы
