--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,9 +26,12 @@ services:
     environment:
       NODE_ENV: development
       PORT: 8118
+      TRUDESK_DOCKER: true
       TD_MONGODB_SERVER: mongo
       TD_MONGODB_PORT: 27017
       TD_MONGODB_DATABASE: herzen
+      TD_MONGODB_HOST: mongo
+      TD_MONGODB_URI: mongodb://mongo:27017/herzen
     ports:
       - "8118:8118"
     volumes:
