Add data/mongo/ to .gitignore and update-server.sh
- Add data/mongo/ to .gitignore to prevent git tracking
- Update update-server.sh to handle MongoDB data exclusion
- MongoDB data will be synced separately via sync-data.sh
- Prevents permission denied errors during updates

--- a/.gitignore
+++ b/.gitignore
@@ -71,8 +71,8 @@ stats\.json
 dist/
 *.heapsnapshot
 
-# Herzen Core - данные включены в Git для синхронизации
-# data/mongo/ - MongoDB данные
+# Herzen Core - данные исключены из Git
+data/mongo/  # MongoDB данные (синхронизируются через sync-data.sh)
 # data/app/ - данные приложения
 # logs/ - логи приложения
 # public/uploads/ - загруженные файлы
