--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "sass": "1.55.0",
     "sass-loader": "13.0.2",
     "semantic-release": "19.0.3",
+    "sharp": "0.34.4",
     "snyk": "1.965.0",
     "standard": "17.0.0",
     "style-loader": "3.3.1",
