Initial Vite migration setup
- Added Vite configuration with React plugin and comprehensive aliases
- Created vendor entry point for bundling third-party libraries
- Updated package.json with Vite build scripts
- Updated .gitignore to exclude compiled JS files from Git
- Updated Gruntfile to support both Webpack and Vite builds
- Configured module resolution for all existing webpack aliases

Next steps: Fix import issues with UIKit and other legacy modules

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ data/mongo/  # MongoDB данные (синхронизируются через
 # data/app/ - данные приложения
 # logs/ - логи приложения
 # public/uploads/ - загруженные файлы
+
+# Скомпилированные JS файлы (создаются сборщиком)
+public/js/*.js
+public/js/*.js.map
+public/js/*.gz
+!public/js/socket.io/  # Исключение для socket.io библиотеки
