feat: Complete jQuery to VanillaJS migration
- Add vanilla-utils.js with jQuery-compatible API
- Replace all jQuery usage in helpers.js with VanillaJS
- Add form validation system using VanillaJS
- Add EasyPieChart compatibility layer
- Update build process to automatically copy utils files
- Fix formUtils undefined error
- Maintain backward compatibility with existing code

Changes:
- src/public/js/utils/vanilla-utils.js: Complete jQuery replacement
- src/public/js/modules/helpers.js: Convert jQuery to VanillaJS
- src/views/layout/main.hbs: Remove jQuery dependency
- package.json: Add copy-utils script for build automation
- vite.legacy.config.js: Add utils alias for Vite
- public/js/utils/vanilla-utils.js: Production copy

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "start": "node ./app",
     "start:prod": "NODE_ENV=production node ./app",
-    "build": "grunt buildcss --gruntfile gruntfile.cjs && npx vite build --config vite.legacy.config.js",
+    "build": "grunt buildcss --gruntfile gruntfile.cjs && npx vite build --config vite.legacy.config.js && npm run copy-utils",
     "build:old": "grunt build --gruntfile gruntfile.cjs",
     "dev": "npx vite --config vite.legacy.config.js",
     "preview": "npx vite preview --config vite.legacy.config.js",
+    "copy-utils": "mkdir -p public/js/utils && cp src/public/js/utils/vanilla-utils.js public/js/utils/",
     "test": "mocha --recursive",
     "lint": "standard | snazzy",
     "format": "prettier-standard \"./*.js\" \"src/*.js\" \"src/**/*.js\" \"src/**/*.jsx\" \"!src/public/js/vendor/**/*.js\" \"!src/public/js/plugins/**/*.js\"",
@@ -79,7 +80,6 @@
     "marked": "4.0.17",
     "matchdep": "2.0.0",
     "memoize-one": "6.0.0",
-    "metrics-graphics": "3.0.0-beta1",
     "mkdirp": "1.0.4",
     "mobx": "6.6.1",
     "mobx-react": "7.5.2",
@@ -131,6 +131,7 @@
     "selectize": "0.12.6",
     "semver": "7.3.7",
     "serve-favicon": "2.5.0",
+    "sifter": "0.5.4",
     "snackbar": "1.1.0",
     "socket.io": "4.5.2",
     "socket.io-client": "4.5.1",
@@ -140,6 +141,7 @@
     "tether": "2.0.0",
     "thirty-two": "1.0.2",
     "to-markdown": "3.1.1",
+    "turndown": "7.2.1",
     "uglify-js": "3.16.2",
     "uikit": "3.24.0",
     "unzipper": "0.10.11",
@@ -180,6 +182,7 @@
     "expose-loader": "4.0.0",
     "grunt": "1.5.3",
     "grunt-contrib-cssmin": "4.0.0",
+    "grunt-contrib-sass": "2.0.0",
     "grunt-contrib-uglify": "5.2.2",
     "grunt-contrib-watch": "1.1.0",
     "grunt-express-server": "0.5.4",
