Replace bcrypt with native Node.js crypto.scrypt and fix MongoDB paths
- Replace bcrypt dependency with native crypto.scrypt for password hashing
- Add backward compatibility with existing bcrypt hashes
- Fix MongoDB data paths: use ./data/mongodb instead of Docker volumes
- Update docker-compose.yml to use local file system for MongoDB data
- Update deploy-server.sh to create proper directory structure on server
- Update sync-data.sh to work with new MongoDB path structure
- Fix Docker restart functionality in routes/index.js for TRUDESK_DOCKER
- Use MongoDB 4.4 instead of 6.0 for better CPU compatibility
- Remove MongoDB authentication for closed Docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: herzen-mongo
     restart: unless-stopped
     volumes:
-      - mongo_data:/data/db
+      - ./data/mongodb:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     ports:
       - "27017:27017"
@@ -24,6 +24,7 @@ services:
     environment:
       NODE_ENV: production
       PORT: 8118
+      TRUDESK_DOCKER: true
       TD_MONGODB_SERVER: mongo
       TD_MONGODB_PORT: 27017
       TD_MONGODB_DATABASE: herzen
@@ -38,7 +39,6 @@ services:
 
 
 volumes:
-  mongo_data:
   herzen_data:
   herzen_logs:
   herzen_uploads:
