Fix: Complete Docker installation and configuration fixes
- Fixed loadConfig() call in Docker mode in app.js to resolve MongoDB connection
- Updated install.js to automatically use 'mongo' host in Docker mode
- Removed hardcoded MongoDB parameters from install.hbs template
- Increased brute-force protection limits in main.js
- Simplified mongo-init.js to only initialize database
- Unified docker-compose.yml for consistent dev/prod behavior
- All changes ensure proper installation flow in Docker environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,11 @@ services:
       NODE_ENV: production
       PORT: 8118
       TRUDESK_DOCKER: true
-      TD_MONGODB_SERVER: mongo
-      TD_MONGODB_PORT: 27017
-      TD_MONGODB_DATABASE: herzen
     ports:
       - "8118:8118"
     volumes:
+      - .:/app
+      - /app/node_modules
       - herzen_data:/app/data
       - herzen_logs:/app/logs
       - herzen_uploads:/app/public/uploads
